k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-detection
  labels:
    app.kubernetes.io/part-of: fraud-detection-platform
